--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 				  </figure>
 				  <h1 class="Cabecera_h1">HortoPlataform </h1>
 				  <p class="Cabecera_frase"> Comercializacion de productos Agricolas</p>
-				  <a href="" id="iconMenu" class="iconMenu"> <i class="fas fa-bars"> </i><a/>
+				  <a href="" id="iconMenu" class="iconMenu"> <i class="fas fa-bars"> </i></a>
 				  </header>
 				  <nav class="nav">
 					  <a class="nav_link" href="">Nosotros</a>
